; ModuleID = '/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_host.c_host_create_mach_voucher.c'
source_filename = "/home/carl/AnghaBench/darwin-xnu/libsyscall/mach/extr_host.c_host_create_mach_voucher.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@MACH_SEND_INVALID_DEST = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @host_create_mach_voucher(i32 %0, i32 %1, i32 %2, i32* %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  store i32 %0, i32* %5, align 4
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32* %3, i32** %8, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = load i32, i32* %7, align 4
  %13 = load i32*, i32** %8, align 8
  %14 = call i32 @host_create_mach_voucher_trap(i32 %10, i32 %11, i32 %12, i32* %13)
  store i32 %14, i32* %9, align 4
  %15 = load i32, i32* %9, align 4
  %16 = icmp eq i32 %15, 16777286
  br i1 %16, label %17, label %19

17:                                               ; preds = %4
  %18 = load i32, i32* @MACH_SEND_INVALID_DEST, align 4
  store i32 %18, i32* %9, align 4
  br label %19

19:                                               ; preds = %17, %4
  %20 = load i32, i32* %9, align 4
  %21 = load i32, i32* @MACH_SEND_INVALID_DEST, align 4
  %22 = icmp eq i32 %20, %21
  br i1 %22, label %23, label %29

23:                                               ; preds = %19
  %24 = load i32, i32* %5, align 4
  %25 = load i32, i32* %6, align 4
  %26 = load i32, i32* %7, align 4
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @_kernelrpc_host_create_mach_voucher(i32 %24, i32 %25, i32 %26, i32* %27)
  store i32 %28, i32* %9, align 4
  br label %29

29:                                               ; preds = %23, %19
  %30 = load i32, i32* %9, align 4
  ret i32 %30
}

declare dso_local i32 @host_create_mach_voucher_trap(i32, i32, i32, i32*) #1

declare dso_local i32 @_kernelrpc_host_create_mach_voucher(i32, i32, i32, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
